Fixed followin:- -Inventory Service correction #2